--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,12 @@
 html, body {
   height: 100%;
 }
-body {
-}
 img {
 	max-width: 100%;
 	height: auto;
 }
-body, h1, h2, h3, h4, h5, h6 {
-
+body, h1, h2, h3, h4, h5, h6, p, label, div {
+  font-family: 'VT323', monospace;
 }
 a, a:visited {
   color: #a14b9e;
