--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ footer {
 footer a, footer a:visited, footer a:hover, footer {
 	color: #fff;
 }
-footer .fab {
+footer .fab, footer .fas {
   font-size: 30px;
   margin-right: 10px;
   margin-left: 10px;
