--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ img {
 	max-width: 100%;
 	height: auto;
 }
-body, h1, h2, h3, h4, h5, h6, p, label, div {
+h1, h2, h3, h4, h5, h6 {
   font-family: 'VT323', monospace;
 }
 p, li, label {
