--- a/_layouts/wrapper.html
+++ b/_layouts/wrapper.html
@@ -4,6 +4,7 @@ layout: wrapper
 {% include header.html %}
 {% include nav.html %}
 <main>
+    {% include jumbotron.html %}
     {{ content }}
 </main>
 {% include footer.html %}
