Fix broken profile link

--- a/_layouts/classes.html
+++ b/_layouts/classes.html
@@ -51,7 +51,7 @@ layout: wrapper
         <div class="col-md-2">
             {% assign author = site.data.people[page.author] %}
             <div class="people bio">
-                <a href="{{ author.url }}"><img src="{{ site.url }}/img/people/{{ author.image }}" alt="{{ author.name }}" title="{{ author.name }}"></a>
+                <img src="{{ site.url }}/img/people/{{ author.image }}" alt="{{ author.name }}" title="{{ author.name }}">
             </div>
         </div>
         <div class="col-md-10">
