--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,7 +13,7 @@ layout: page
                         {{ page.service }}
                     </p>
                     {% endif %}
-                    <h1 class="display-4">{{ page.title }}</h1>
+                    <h1>{{ page.title }}</h1>
                     {% if page.excerpt %}
                     <p class="lead">{{ page.excerpt }}</p>
                     {% endif %}
