--- a/_layouts/classes.html
+++ b/_layouts/classes.html
@@ -67,7 +67,7 @@ layout: wrapper
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <p><a class="btn btn-primary btn-lg" href="{{ page.form }}" role="button">Register</a> &nbsp; Questions? <a href="{{ site.url }}/contact">Contact us</a></p>
+            <p><a class="btn btn-primary btn-lg" href="{{ page.form }}" role="button">Sign up</a> &nbsp; Questions? <a href="{{ site.url }}/contact">Contact us</a></p>
         </div>
     </div>
 </div>
