--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -20,7 +20,7 @@
                 {% endif %}
                 {% if page.form %}
                 <div class="request">
-                    <p><a class="btn btn-primary btn-lg" href="{{ page.form }}" role="button">Request {{ page.service | downcase }}</a> &nbsp; Questions? <a href="{{ site.url }}/contact">Contact us</a></p>
+                    <p><a class="btn btn-primary btn-lg" href="{{ page.form }}" role="button">Sign up</a> &nbsp; Questions? <a href="{{ site.url }}/contact">Contact us</a></p>
                 </div>
                 {% endif %}
             </div>
