--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@ layout: default
                     {% endif %}
                     {% if page.form %}
                     <div class="request">
-                        <p><a class="btn btn-primary btn-lg" href="{{ page.form }}" role="button">Sign up {{ page.service | downcase }}</a> &nbsp; Questions? <a href="{{ site.url }}/contact">Contact us</a></p>
+                        <p><a class="btn btn-primary btn-lg" href="{{ page.form }}" role="button">Sign up</a> &nbsp; Questions? <a href="{{ site.url }}/contact">Contact us</a></p>
                     </div>
                     {% endif %}
                 </div>
