--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,6 +22,9 @@
                         {% if site.twitter_username %}
                         <a href="https://twitter.com/{{ site.twitter_username }}"><i class="fab fa-twitter"></i></a>
                         {% endif %}
+                        {% if site.youtube_link %}
+                        <a href="{{ site.youtube_link }}"><i class="fab fa-youtube"></i></a>
+                        {% endif %}
                         {% if site.github_username %}
                         <a href="https://github.com/{{ site.github_username }}"><i class="fab fa-github"></i></a>
                         {% endif %}
