--- a/_includes/classes.html
+++ b/_includes/classes.html
@@ -1,11 +1,13 @@
-<div class="card-deck">
-    {% for item in site.classes %}
-    <div class="card">
-        <div class="card-body icon">
-            <a href="{{ item.url }}" class="stretched-link"><i class="fas fa-laptop-code"></i></a>
-            <h3 class="h3"><a href="{{ item.url }}">{{ item.title }}</a></h3>
-            <p class="card-text">{{ item.excerpt }}</p>
+---
+layout: wrapper
+title: Classes
+description:
+excerpt:
+---
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            {% include classes.html %}
         </div>
     </div>
-    {% endfor %}
 </div>
